# vcddiff

./: .gitignore  Cargo.toml  README.md  justfile
src/: main.rs  vcdparser.rs
test-data/: Makefile  gcd_buggy.v  gcd_buggy_tb.v
test-data/buggy/: gcd_buggy.v  gcd_buggy_tb.v
test-data/golden/: gcd.v  gcd_tb.v
