[package]
name = "vcddiff"
version = "0.1.0"
edition = "2021"
authors = ["Joonho Whangbo <joonho.whangbo@berkeley.edu>"]
description = "A Rust library that can compare two VCD files and point to sources of divergence"
repository = "https://github.com/joonho3020/vcddiff.git"
readme = "README.md"
license = "MIT"

[dependencies]
wellen = "0.9.14"
indexmap = "2.9.0"
indicatif = "0.17.11"
itertools = "0.14.0"
clap = { version = "4.5.30", features = ["derive"] }
gag = "1.0.0"
